--- a/views/product/catalogue.handlebars
+++ b/views/product/catalogue.handlebars
@@ -15,7 +15,7 @@
                                     onerror="this.src='/img/no-image.jpg'" style="max-height:160px">
                             </a> --}}
                             <a href="/product/itemDesc/{{id}}" data-title="{{title}}" data-toggle="lightbox">
-                                <img src="{{posterURL}}" alt="Poster" onerror="this.src='/img/no-image.jpg' style="width:100px;height:100px;">
+                                <img src="{{posterURL}}" alt="Poster" onerror="this.src='/img/no-image.jpg'" >
                             </a>
                         </div> <!-- img-wrap.// -->
                         <figcaption class="info-wrap">
