--- a/views/booking/addBooking.handlebars
+++ b/views/booking/addBooking.handlebars
@@ -7,7 +7,7 @@
                 <div>
                     <div class="form-group left spacing1">
                         <label class="font-italic" for="name">Name</label>
-						<input class="form-control" id="name" name="name" onblur="initialiseName()" required />
+						<input class="form-control" id="name" name="name" onblur="initialiseFirstname()" required />
                     </div>
                     <div class="form-group left spacing2">
                     	<label class="font-italic">Date</label>
@@ -24,15 +24,15 @@
 
                     <div class="form-group clear left spacing1">
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="radio" id="consultation" value="consultation" name="service">
+							<input class="form-check-input" type="radio" id="consultation" value="Consultation" name="service">
 							<label class="form-check-label" for="consultation">Consultation</label>
 						</div>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="radio" id="cupping" value="cupping" name="service">
+							<input class="form-check-input" type="radio" id="cupping" value="Cupping" name="service">
 							<label class="form-check-label" for="cupping">Cupping</label>
 						</div>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="radio" id="acupuncture" value="acupuncture" name="service">
+							<input class="form-check-input" type="radio" id="acupuncture" value="Acupuncture" name="service">
 							<label class="form-check-label" for="acupuncture">Acupuncture</label>
 						</div>                    
 					</div>
