--- a/views/booking/editBooking.handlebars
+++ b/views/booking/editBooking.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="card card-body">
-		<h3>Add Product</h3>
+		<h3>Edit Booking</h3>
 		<form action="" method="post">
 			<div class="form-group">
 				<div class="row mb-2">
@@ -52,7 +52,7 @@
                 </div>
 			</div>
 			<br>
-			<button id="btnSubmit" type="submit" class="btn btn-primary">Add
+			<button id="btnSubmit" type="submit" class="btn btn-primary">Save
 			</button>
 		</form>
 	</div>
