quiz all parts done

--- a/views/quiz/addQuiz.handlebars
+++ b/views/quiz/addQuiz.handlebars
@@ -336,20 +336,29 @@ input[type="radio"].gender + label.gender {
                     </label>
                 </div>
                 <div class="form-element">
-                    <input type="checkbox" name="area" value="hair" id="hair" onclick="ensureOneCheck('area', 'areaErr', 'nextBtn')">
-                    <label for="hair">
+                    <input type="checkbox" name="area" value="eyes" id="eyes" onclick="ensureOneCheck('area', 'areaErr', 'nextBtn')">
+                    <label for="eyes">
                         <div class="icon">
-                            <i class="fa-solid fa-person"></i>
-                            <p class="title">Hair</p>
+                            <i class="fa-solid fa-eye"></i>
+                            <p class="title">Eyes</p>
                         </div>
                     </label>
                 </div>
                 <div class="form-element">
-                    <input type="checkbox" name="area" value="stress" id="stress" onclick="ensureOneCheck('area', 'areaErr', 'nextBtn')">
-                    <label for="stress">
+                    <input type="checkbox" name="area" value="gut" id="gut" onclick="ensureOneCheck('area', 'areaErr', 'nextBtn')">
+                    <label for="gut">
                         <div class="icon">
-                            <i class="fa-solid fa-face-tired"></i>
-                            <p class="title">Stress</p>
+                            <i class="fa-solid fa-person"></i>
+                            <p class="title">Gut</p>
+                        </div>
+                    </label>
+                </div>
+                <div class="form-element">
+                    <input type="checkbox" name="area" value="skin" id="skin" onclick="ensureOneCheck('area', 'areaErr', 'nextBtn')">
+                    <label for="skin">
+                        <div class="icon">
+                            <i class="fa-solid fa-hand-dots"></i>
+                            <p class="title">Skin</p>
                         </div>
                     </label>
                 </div>
