--- a/views/product/addProduct.handlebars
+++ b/views/product/addProduct.handlebars
@@ -13,6 +13,10 @@
                         <input class="form-control" type="number" id="stock" name="stock" required/>
 					</div>
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6" style="padding-left: 0px; padding-right: 0px; padding-bottom: 10px">
+						<label class="font-italic" for="weight">Weight</label>
+						<input class="form-control" type="text" id="weight" name="weight" required/>
+					</div>
+					<div class="col-12 col-sm-12 col-md-12 col-lg-6" style="padding-left: 0px; padding-right: 0px; padding-bottom: 10px">
 						<label class="font-italic" for="price">Price</label>
 						<input class="form-control" type="text" id="price" name="price" required/>
 					</div>
