--- a/views/product/listProducts.handlebars
+++ b/views/product/listProducts.handlebars
@@ -14,6 +14,7 @@
 								<th>&nbsp;ID</th>
 								<th>&nbsp;Name</th>
 								<th>&nbsp;Stock</th>
+								<th>&nbsp;Weight (grams)</th>
 								<th>&nbsp;Price</th>
 								<th>&nbsp;Category</th>
 								<th>&nbsp;Action</th>
@@ -24,6 +25,7 @@
 							<td>&nbsp;{{id}}</td>
 							<td>&nbsp;{{name}}</td>
 							<td>&nbsp;{{stock}}</td>
+							<td>&nbsp;{{weight}}</td>
 							<td>&nbsp;{{price}}</td>
 							<td>&nbsp;{{spaceCommas category}}</td>
 							<td>
@@ -33,47 +35,36 @@
 										Edit Product
 									</a>
 								</div>
-								{{!-- <div>
-									<a href="/staff/deletestaff/{{id}}" class="card-link"
-										style="color: darkred" data-toggle="confirmation"
-										data-title="Confirm delete?">
+								<div>
+									<!-- Button HTML (to Trigger Modal) -->
+									<a href="#myModal" class="trigger-btn delete text-danger" data-toggle="modal"> 
 										<i class="far fa-trash-alt"></i>
 										Delete
 									</a>
-								</div> --}}
+								</div>
 
-								<!-- Logout Modal-->
-								<div class="modal fade" id="" tabindex="-1" role="dialog"
-									aria-labelledby="exampleModalLabel" aria-hidden="true">
-									<div class="modal-dialog" role="document">
-										<div class="modal-content">
-											<div class="modal-header">
-												<h5 class="modal-title" id="exampleModalLabel">Delete
-													Product</h5>
-												<button class="close" type="button" data-dismiss="modal"
-													aria-label="Close">
-													<span aria-hidden="true">×</span>
-												</button>
-											</div>
-											<div class="modal-body">Select "Delete" below if you are
-												deleting this customer account.
-											</div>
-											<div class="modal-footer">
-												<button class="btn btn-secondary" type="button"
-													data-dismiss="modal">Cancel</button>
-												<a class="btn btn-primary"
-													href="/product/deleteProduct/{{id}}">Delete</a>
+								<!-- Modal HTML -->
+								<form action="/product/deleteProduct/{{id}}">
+									<div id="myModal" class="modal fade">
+										<div class="modal-dialog modal-confirm">
+											<div class="modal-content">
+												<div class="modal-header">
+													<h5 class="modal-title">Deletion Confirmation</h5>
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+														<span aria-hidden="true">&times;</span>
+													</button>
+												</div>
+												<div class="modal-body">
+													<p>Do you really want to delete {{name}}? This process cannot be undone.</p>
+												</div>
+												<div class="modal-footer justify-content-center">
+													<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+													<button input type="submit" value="Delete" class="btn btn-danger">Delete</button>
+												</div>
 											</div>
 										</div>
 									</div>
-								</div>
-								<div>
-									<a href="/product/deleteProduct/{{id}}" class="card-link" data-toggle="confirmation" data-title="Confirm delete?" 
-										style="color: darkred">
-										<i class="far fa-trash-alt"></i>
-										Delete Product
-									</a>
-								</div>
+								</form>
 							</td>
 						</tr>
 						{{/each}}
