--- a/views/quiz/listQuizzes.handlebars
+++ b/views/quiz/listQuizzes.handlebars
@@ -131,12 +131,12 @@
                                 <div class="card-footer">
                                         <div class="text-center">
                                             <!-- Button HTML (to Trigger Modal) -->
-                                            <a href="#myModal" class="trigger-btn delete" data-toggle="modal">Delete</a>
+                                            <a href="#myModal_{{id}}" class="trigger-btn delete" data-toggle="modal">Delete</a>
                                         </div>
 
                                         <!-- Modal HTML -->
                                         <form action="/quiz/deleteQuiz/{{id}}">
-                                            <div id="myModal" class="modal fade">
+                                            <div id="myModal_{{id}}" class="modal fade">
                                                 <div class="modal-dialog modal-confirm">
                                                     <div class="modal-content">
                                                         <div class="modal-header">
