--- a/views/product/editProduct.handlebars
+++ b/views/product/editProduct.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="card card-body">
-		<h3>Add Product</h3>
+		<h3>Edit Product</h3>
 		<form action="" method="post">
 			<div class="row mb-3">
 				<div class="col-lg-9">
@@ -79,14 +79,14 @@
 						<label class="custom-file-label" for="customFile">Choose File</label>
 					</div>
 					<div class="text-danger small mb-2" id="posterErr" style="display:none"></div>
-					<img id="poster" src="/img/no-image.jpg" alt="Poster" class="border img-thumbnail img-fluid"
+					<img id="poster" src="{{product.posterURL}}" alt="Poster" class="border img-thumbnail img-fluid"
 						onerror="this.src='/img/no-image.jpg'">
 					{{!—- Hidden field to submit URL of poster to the server --}}
 					<input id="posterURL" type="hidden" name="posterURL" value="{{product.posterURL}}">
 				</div>
 			</div>
 			<br>
-			<button id="btnSubmit" type="submit" class="btn btn-primary">Add
+			<button id="btnSubmit" type="submit" class="btn btn-primary">Save
 			</button>
 		</form>
 	</div>
