--- a/views/product/listProducts.handlebars
+++ b/views/product/listProducts.handlebars
@@ -4,7 +4,10 @@
 		<!-- Page Heading -->
 		<div class="card shadow mb-4">
 			<div class="card-header py-3" style="background-color:#8BAD97;">
-				<h5 class="m-0 font-weight-bold" style="color:white;">Product Inventory</h5>
+				<h5 class="m-0 font-weight-bold" style="color:white; ">Product Inventory
+					<a href="/product/addProduct" class="card-link mb-2" style="color:white; padding-right:20px ; padding-top:6px; float:right;">
+					<i class="fa-solid fa-square-plus"></i> Add Product</a>
+				</h5>
 			</div>
 			<div class="card-body">
 				<div class="table-responsive">
@@ -15,7 +18,7 @@
 								<th>&nbsp;Name</th>
 								<th>&nbsp;Stock</th>
 								<th>&nbsp;Weight (grams)</th>
-								<th>&nbsp;Price</th>
+								<th>&nbsp;Price ($)</th>
 								<th>&nbsp;Category</th>
 								<th>&nbsp;Action</th>
 							</tr>
@@ -37,7 +40,7 @@
 								</div>
 								<div>
 									<!-- Button HTML (to Trigger Modal) -->
-									<a href="#myModal" class="trigger-btn delete text-danger" data-toggle="modal"> 
+									<a href="#myModal_{{id}}" class="trigger-btn delete text-danger" data-toggle="modal"> 
 										<i class="far fa-trash-alt"></i>
 										Delete
 									</a>
@@ -45,7 +48,7 @@
 
 								<!-- Modal HTML -->
 								<form action="/product/deleteProduct/{{id}}">
-									<div id="myModal" class="modal fade">
+									<div id="myModal_{{id}}" class="modal fade">
 										<div class="modal-dialog modal-confirm">
 											<div class="modal-content">
 												<div class="modal-header">
@@ -55,11 +58,11 @@
 													</button>
 												</div>
 												<div class="modal-body">
-													<p>Do you really want to delete {{name}}? This process cannot be undone.</p>
+													<p>Do you really want to delete this product? This process cannot be undone.</p>
 												</div>
 												<div class="modal-footer justify-content-center">
 													<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-													<button input type="submit" value="Delete" class="btn btn-danger">Delete</button>
+													<button type="submit" value="Delete" class="btn btn-danger">Delete</button>
 												</div>
 											</div>
 										</div>
